openpearl-code/testsuite/must_not_compile/00_basics/041_spc_list_without_brace.expect
041_spc_list_without_brace.prl:4:9: ERROR : Syntax error : expect type
   SPC f1,f2 FIXED GLOBAL(b);
         ^
