openpearl-code/testsuite/must_not_compile/00_basics/041_spc_list_without_brace.prl
MODULE(m1);

PROBLEM;
   SPC f1,f2 FIXED GLOBAL(b);

MODEND;
